translate more texts

--- a/react/src/webshop/i18n/translated/ar.json
+++ b/react/src/webshop/i18n/translated/ar.json
@@ -261,7 +261,8 @@
             "show_more": "اعرض المزيد",
             "total": "الإجمالي",
             "view_explanation": "عرض الشرح",
-            "why": "لماذا؟"
+            "why": "لماذا؟",
+            "activate": "تفعيل"
         },
         "product_item_grid": {
             "bookmark": "إضافة إلى قائمة الرغبات"
@@ -387,13 +388,13 @@
             "products": "العرض"
         },
         "distances": {
-            "3": "&lt; أقل من 3 كم",
-            "5": "&lt; أقل من 5 كم",
-            "10": "&lt; أقل من 10 كم",
-            "15": "&lt; أقل من 15 كم",
-            "25": "&lt; 25 كم",
-            "50": "&lt; أقل من 50 كم",
-            "75": "&lt; 75 كم",
+            "3": "< أقل من 3 كم",
+            "5": "< أقل من 5 كم",
+            "10": "< أقل من 10 كم",
+            "15": "< أقل من 15 كم",
+            "25": "< 25 كم",
+            "50": "< أقل من 50 كم",
+            "75": "< 75 كم",
             "everywhere": "في كل مكان"
         },
         "filters": {
@@ -500,7 +501,21 @@
         "title": "المصادقة الثنائية",
         "unknown_error": "رسالة خطأ غير معروفة.",
         "verification_codes_sent": "تم إرسال رموز التحقق عبر الرسائل النصية القصيرة",
-        "vouchers_restrict": "هناك قسيمة واحدة أو أكثر من صندوق تقيد هذه المؤسسة"
+        "vouchers_restrict": "هناك قسيمة واحدة أو أكثر من صندوق تقيد هذه المؤسسة",
+        "providers": {
+            "authenticator": {
+                "title": "تطبيق Authenticator"
+            },
+            "phone": {
+                "title": "التحقق من الرسائل النصية القصيرة"
+            }
+        },
+        "app_providers": {
+            "authenticator_1password": "1مصادقة كلمة المرور",
+            "authenticator_google": "مصادقة Google",
+            "authenticator_lastpass": "مُوثِّق LastPass Authenticator",
+            "authenticator_microsoft": "موثق مايكروسوفت"
+        }
     },
     "security_sessions": {
         "breadcrumbs": {
@@ -629,7 +644,7 @@
                 "activate": "البرطمانات"
             },
             "products": "العرض",
-            "profile": "الملف الشخصي &gt;",
+            "profile": "الملف الشخصي >",
             "providers": "المزودون",
             "records": "بياناتي الشخصية",
             "reimbursements": "استرداد التكاليف",
@@ -907,10 +922,10 @@
                 "title_log_digid": "تسجيل دخول واحد مع DigiD"
             },
             "labels": {
-                "has_app": "تسجيل الدخول باستخدام تطبيقي &gt;",
-                "no_app": "أريد تسجيل الدخول باستخدام عنوان بريدي الإلكتروني &gt;",
-                "restore_with_digid_formal": "هل نسيت عنوان البريد الإلكتروني الذي استخدمته؟ &gt;",
-                "restore_with_digid_informal": "هل نسيت عنوان البريد الإلكتروني الذي استخدمته؟ &gt;"
+                "has_app": "تسجيل الدخول باستخدام تطبيقي >",
+                "no_app": "أريد تسجيل الدخول باستخدام عنوان بريدي الإلكتروني >",
+                "restore_with_digid_formal": "هل نسيت عنوان البريد الإلكتروني الذي استخدمته؟ >",
+                "restore_with_digid_informal": "هل نسيت عنوان البريد الإلكتروني الذي استخدمته؟ >"
             },
             "pane": {
                 "criterion_any": "'' يمكن أن تكون أي قيمة.",
@@ -1097,9 +1112,9 @@
             }
         },
         "labels": {
-            "age": "&lt; أقل من 18 سنة",
+            "age": "< أقل من 18 سنة",
             "agelimit": "الحد العمري",
-            "amount": "&lt; € 1118.46",
+            "amount": "< € 1118.46",
             "categories_label": "يمكنك تفعيل رصيدك حتى:",
             "category": "الفئة",
             "children": "الأطفال",
@@ -1398,7 +1413,7 @@
                 "cta_av": "",
                 "subtitle_av": "هناك العديد من الأواني المختلفة داخل Westerkwartier، وغالباً ما تكون أكثر مما تعتقد. يتيح لك هذا الموقع الإلكتروني إمكانية التقدم بطلب للحصول على الأواني وإدارتها وإنفاقها."
             },
-            "signup_cta": "اقرأ المزيد &gt;",
+            "signup_cta": "اقرأ المزيد >",
             "subtitle": "{{fund}}مرحبًا بك في الموقع الإلكتروني لـ . {{fund}} هل لديك تخصيص من البلدية لـ ? ثم يمكنك الاطلاع على العرض والأموال التي يمكنك إنفاقها هنا.",
             "subtitle_av": "{{fund}}مرحبًا بك في الموقع الإلكتروني لـ . يمكنك التقدم بطلب للحصول على البرنامج والاطلاع على العرض هنا. بعد التقديم، يمكنك أيضاً معرفة المبلغ المالي الذي يمكنك إنفاقه.",
             "subtitle_multi": "{{org_name}} {{org_name}} مرحبًا بك في متجر الويب الخاص بـ هل حصلت على جائزة من خلال ؟ ثم يمكنك الاطلاع على العرض والأموال التي يمكنك إنفاقها هنا.",
@@ -1485,13 +1500,13 @@
             "providers": "المزودون"
         },
         "distances": {
-            "3": "&lt; أقل من 3 كم",
-            "5": "&lt; أقل من 5 كم",
-            "10": "&lt; أقل من 10 كم",
-            "15": "&lt; أقل من 15 كم",
-            "25": "&lt; 25 كم",
-            "50": "&lt; أقل من 50 كم",
-            "75": "&lt; 75 كم",
+            "3": "< أقل من 3 كم",
+            "5": "< أقل من 5 كم",
+            "10": "< أقل من 10 كم",
+            "15": "< أقل من 15 كم",
+            "25": "< 25 كم",
+            "50": "< أقل من 50 كم",
+            "75": "< 75 كم",
             "everywhere": "في كل مكان"
         },
         "filters": {
@@ -1730,7 +1745,10 @@
             "no_data": "لا توجد بيانات",
             "out_of_stock": "لا مزيد من المخزون"
         },
-        "tooltip": "كم مرة أخرى يمكنك الاستفادة من هذا العرض"
+        "tooltip": "كم مرة أخرى يمكنك الاستفادة من هذا العرض",
+        "price": {
+            "free": "مجاناً"
+        }
     },
     "records_create": {
         "buttons": {
@@ -1827,7 +1845,9 @@
             "labels": {
                 "contact_provider": "هل لديك أي أسئلة حول هذا العرض؟ إذا كان الأمر كذلك، يُرجى الاتصال بنا.",
                 "contact_sponsor": "هل لديك أي أسئلة؟ اتصل بنا",
-                "description": "1.<br/><br/>انقر على العرض واختر النشاط واحجزه. أو 2. خذ رمز الاستجابة السريعة إلى مقدم الخدمة. سيقوم مقدم الخدمة بمسح رمز الاستجابة السريعة وحجز نشاطك."
+                "description": "1.<br/><br/>انقر على العرض واختر النشاط واحجزه. أو 2. خذ رمز الاستجابة السريعة إلى مقدم الخدمة. سيقوم مقدم الخدمة بمسح رمز الاستجابة السريعة وحجز نشاطك.",
+                "email": "عنوان البريد الإلكتروني",
+                "phone": "رقم الهاتف"
             },
             "lost_my_pass": "لقد فقدت بطاقتي",
             "qrcode": {
@@ -3148,7 +3168,9 @@
     "app_footer": {
         "columns": {
             "links": "الروابط",
-            "me_app": "قم بتنزيل تطبيق Me"
+            "me_app": "قم بتنزيل تطبيق Me",
+            "follow_us": "تابعنا على",
+            "site_info": "معلومات الموقع"
         },
         "links": {
             "accessibility": "بيان إمكانية الوصول",
@@ -3157,7 +3179,8 @@
             "terms_and_conditions": "الشروط والأحكام العامة"
         },
         "me_app_more_info": "تعرّف على المزيد حول تطبيق Me",
-        "provider_sign_up": "التسجيل كمقدم خدمات"
+        "provider_sign_up": "التسجيل كمقدم خدمات",
+        "sponsor_logo_alt": "شعار الراعي"
     },
     "block_funds": {
         "labels": {
@@ -3259,7 +3282,9 @@
             "security": "الأمن",
             "sessions": "الجلسات",
             "share": "شارك",
-            "vouchers": "الائتمان"
+            "vouchers": "الائتمان",
+            "me_app": "أنا-التطبيق",
+            "provider_sign_up": "التسجيل كمقدم خدمات"
         },
         "header": {
             "subtitle": "قم بمسح رمز الاستجابة السريعة الشخصي الخاص بك بواسطة أحد المراجعين.",
@@ -3271,9 +3296,9 @@
     },
     "top_navbar_search": {
         "noresult": {
-            "funds_label": "عرض جميع الاعتمادات &gt;",
-            "products_label": "عرض جميع العروض &gt;",
-            "providers_label": "عرض جميع مقدمي الخدمات &gt;",
+            "funds_label": "عرض جميع الاعتمادات >",
+            "products_label": "عرض جميع العروض >",
+            "providers_label": "عرض جميع مقدمي الخدمات >",
             "subtitle": "{{ query }}لم يتم العثور على نتائج لـ \"\". يرجى المحاولة مرة أخرى باستخدام مصطلحات بحث أخرى."
         },
         "placeholders": {
@@ -3287,5 +3312,28 @@
             "products_label": "العرض",
             "providers_label": "المزودون"
         }
+    },
+    "pre_check": {
+        "breadcrumb": {
+            "check": "التحقق من الأواني",
+            "home": "الصفحة الرئيسية"
+        },
+        "funds": "الأموال",
+        "next_step": "التالي",
+        "no_value": "---",
+        "of": "من",
+        "previous_step": "الخطوة السابقة",
+        "search": "بحث",
+        "show_less": "اعرض أقل",
+        "show_more": "اعرض المزيد",
+        "advice": "الرأي",
+        "all_categories": "جميع الفئات",
+        "all_organizations": "جميع المنظمات",
+        "almost_there": "لقد أوشكت على الانتهاء!",
+        "change_answers": "تغيير الإجابات",
+        "download_pdf": "التنزيل بصيغة PDF",
+        "total_amount": "المبلغ الإجمالي",
+        "total_offers": "إجمالي العرض",
+        "your_data": "بياناتك"
     }
 }
