--- a/react/src/webshop/i18n/translated/ru.json
+++ b/react/src/webshop/i18n/translated/ru.json
@@ -111,7 +111,9 @@
     "app_footer": {
         "columns": {
             "links": "Ссылки",
-            "me_app": "Загрузите приложение Me"
+            "me_app": "Загрузите приложение Me",
+            "follow_us": "Следите за нами на:",
+            "site_info": "Информация о сайте"
         },
         "links": {
             "accessibility": "Заявление о доступности",
@@ -120,7 +122,8 @@
             "terms_and_conditions": "Общие положения и условия"
         },
         "me_app_more_info": "Узнайте больше о приложении Me",
-        "provider_sign_up": "Зарегистрируйтесь в качестве провайдера"
+        "provider_sign_up": "Зарегистрируйтесь в качестве провайдера",
+        "sponsor_logo_alt": "Логотип спонсора"
     },
     "auth_start": {
         "example": "Введите действительный адрес электронной почты, например, <strong>naam@voorbeeld.com</strong>."
@@ -537,10 +540,10 @@
                 "title_log_digid": "Единая регистрация с DigiD"
             },
             "labels": {
-                "has_app": "Войти с помощью Me-app &gt;",
-                "no_app": "Я хочу войти в систему, используя свой адрес электронной почты &gt;",
-                "restore_with_digid_formal": "Забыли, какой адрес электронной почты вы использовали? &gt;",
-                "restore_with_digid_informal": "Забыли, какой адрес электронной почты вы использовали? &gt;"
+                "has_app": "Войти с помощью Me-app >",
+                "no_app": "Я хочу войти в систему, используя свой адрес электронной почты >",
+                "restore_with_digid_formal": "Забыли, какой адрес электронной почты вы использовали? >",
+                "restore_with_digid_informal": "Забыли, какой адрес электронной почты вы использовали? >"
             },
             "pane": {
                 "criterion_any": "{{ name }}' ' может быть любым значением.",
@@ -698,9 +701,9 @@
             }
         },
         "labels": {
-            "age": "&lt; 18 лет",
+            "age": "< 18 лет",
             "agelimit": "Возрастной ценз",
-            "amount": "&lt; € 1118.46",
+            "amount": "< € 1118.46",
             "categories_label": "Вы можете активировать кредит на сумму до:",
             "category": "Категория",
             "children": "Дети",
@@ -1083,7 +1086,7 @@
                 "cta_av": "",
                 "subtitle_av": "В Westerkwartier существует множество различных горшков, зачастую больше, чем вы думаете. На этом сайте вы можете подать заявку, управлять и расходовать средства."
             },
-            "signup_cta": "Читать далее &gt;",
+            "signup_cta": "Читать далее >",
             "subtitle": "{{fund}}Добро пожаловать на сайт компании . {{fund}} У вас есть ассигнования от муниципалитета на ? Тогда вы можете посмотреть предложение и деньги, которые вы можете потратить здесь.",
             "subtitle_av": "{{fund}}Добро пожаловать на сайт компании . Здесь вы можете подать заявку на участие в программе и ознакомиться с предложением. После подачи заявки вы также можете посмотреть, сколько денег вы можете потратить.",
             "subtitle_multi": "{{org_name}} {{org_name}} Добро пожаловать в интернет-магазин Вы получили награду через ? Тогда вы можете посмотреть предложение и деньги, которые вы можете потратить здесь.",
@@ -1204,7 +1207,8 @@
             "show_more": "Показать еще",
             "total": "Всего",
             "view_explanation": "Посмотреть объяснение",
-            "why": "Почему?"
+            "why": "Почему?",
+            "activate": "Активируйте"
         },
         "product_item_grid": {
             "bookmark": "Добавить в список желаний"
@@ -2177,7 +2181,10 @@
             "no_data": "Нет данных",
             "out_of_stock": "Больше никаких акций"
         },
-        "tooltip": "Сколько еще раз вы можете воспользоваться этим предложением"
+        "tooltip": "Сколько еще раз вы можете воспользоваться этим предложением",
+        "price": {
+            "free": "Бесплатно"
+        }
     },
     "products": {
         "breadcrumbs": {
@@ -2185,13 +2192,13 @@
             "products": "Предложение"
         },
         "distances": {
-            "3": "&lt; 3 км",
-            "5": "&lt; 5 км",
-            "10": "&lt; 10 км",
-            "15": "&lt; 15 км",
-            "25": "&lt; 25 км",
-            "50": "&lt; 50 км",
-            "75": "&lt; 75 км",
+            "3": "< 3 км",
+            "5": "< 5 км",
+            "10": "< 10 км",
+            "15": "< 15 км",
+            "25": "< 25 км",
+            "50": "< 50 км",
+            "75": "< 75 км",
             "everywhere": "Везде"
         },
         "filters": {
@@ -2242,7 +2249,9 @@
             "security": "Безопасность",
             "sessions": "Сессии",
             "share": "Поделиться",
-            "vouchers": "Кредит"
+            "vouchers": "Кредит",
+            "me_app": "Me-app",
+            "provider_sign_up": "Зарегистрируйтесь в качестве провайдера"
         },
         "header": {
             "subtitle": "Попросите рецензента отсканировать ваш персональный QR-код.",
@@ -2352,13 +2361,13 @@
             "providers": "Провайдеры"
         },
         "distances": {
-            "3": "&lt; 3 км",
-            "5": "&lt; 5 км",
-            "10": "&lt; 10 км",
-            "15": "&lt; 15 км",
-            "25": "&lt; 25 км",
-            "50": "&lt; 50 км",
-            "75": "&lt; 75 км",
+            "3": "< 3 км",
+            "5": "< 5 км",
+            "10": "< 10 км",
+            "15": "< 15 км",
+            "25": "< 25 км",
+            "50": "< 50 км",
+            "75": "< 75 км",
             "everywhere": "Везде"
         },
         "filters": {
@@ -2718,7 +2727,21 @@
         "title": "Двухфакторная аутентификация",
         "unknown_error": "Неизвестное сообщение об ошибке.",
         "verification_codes_sent": "Коды проверки были отправлены по SMS",
-        "vouchers_restrict": "Имеется один или несколько ваучеров из фонда, ограничивающего данное учреждение"
+        "vouchers_restrict": "Имеется один или несколько ваучеров из фонда, ограничивающего данное учреждение",
+        "providers": {
+            "authenticator": {
+                "title": "Приложение Authenticator"
+            },
+            "phone": {
+                "title": "SMS-верификация"
+            }
+        },
+        "app_providers": {
+            "authenticator_1password": "Аутентификатор 1Password",
+            "authenticator_google": "Аутентификатор Google",
+            "authenticator_lastpass": "Аутентификатор LastPass",
+            "authenticator_microsoft": "Аутентификатор Microsoft"
+        }
     },
     "security_sessions": {
         "breadcrumbs": {
@@ -2846,9 +2869,9 @@
     "test": "{{name}} {{foo}}",
     "top_navbar_search": {
         "noresult": {
-            "funds_label": "Посмотреть все кредиты &gt;",
-            "products_label": "Посмотреть все предложения &gt;",
-            "providers_label": "Посмотреть всех поставщиков &gt;",
+            "funds_label": "Посмотреть все кредиты >",
+            "products_label": "Посмотреть все предложения >",
+            "providers_label": "Посмотреть всех поставщиков >",
             "subtitle": "{{ query }}Для \" \" результатов не найдено. Пожалуйста, попробуйте повторить поиск с другими словами."
         },
         "placeholders": {
@@ -2956,7 +2979,7 @@
                 "activate": "Кувшины"
             },
             "products": "Предложение",
-            "profile": "Профиль &gt;",
+            "profile": "Профиль >",
             "providers": "Провайдеры",
             "records": "Мои личные данные",
             "reimbursements": "Возмещение затрат",
@@ -3116,7 +3139,9 @@
             "labels": {
                 "contact_provider": "У вас есть вопросы по поводу этого предложения? Если да, пожалуйста, свяжитесь с нами.",
                 "contact_sponsor": "Есть вопросы? Свяжитесь с нами.",
-                "description": "1.<br/><br/>Нажмите на \"Предложение\", выберите и забронируйте мероприятие. ИЛИ 2. Отнесите QR-код поставщику услуг. Поставщик услуг отсканирует QR-код и забронирует ваше мероприятие."
+                "description": "1.<br/><br/>Нажмите на \"Предложение\", выберите и забронируйте мероприятие. ИЛИ 2. Отнесите QR-код поставщику услуг. Поставщик услуг отсканирует QR-код и забронирует ваше мероприятие.",
+                "email": "Адрес электронной почты:",
+                "phone": "Номер телефона:"
             },
             "lost_my_pass": "Я потерял пропуск.",
             "qrcode": {
@@ -3287,5 +3312,28 @@
         },
         "description": "Эта страница находится в стадии разработки.",
         "title": "Незавершенное производство"
+    },
+    "pre_check": {
+        "breadcrumb": {
+            "check": "Кастрюли проверяют",
+            "home": "Главная"
+        },
+        "funds": "Средства",
+        "next_step": "Следующий",
+        "no_value": "---",
+        "of": "с сайта",
+        "previous_step": "Предыдущий шаг",
+        "search": "Поиск",
+        "show_less": "Показать меньше",
+        "show_more": "Показать еще",
+        "advice": "Мнение",
+        "all_categories": "Все категории",
+        "all_organizations": "Все организации",
+        "almost_there": "Вы почти у цели!",
+        "change_answers": "Изменить ответы",
+        "download_pdf": "Скачать как PDF",
+        "total_amount": "Общая сумма",
+        "total_offers": "Общее предложение",
+        "your_data": "Ваши данные"
     }
 }
