--- a/react/src/webshop/i18n/translated/uk.json
+++ b/react/src/webshop/i18n/translated/uk.json
@@ -111,7 +111,9 @@
     "app_footer": {
         "columns": {
             "links": "Посилання",
-            "me_app": "Завантажте додаток Me"
+            "me_app": "Завантажте додаток Me",
+            "follow_us": "Йдіть за нами:",
+            "site_info": "Інформація про сайт"
         },
         "links": {
             "accessibility": "Заява про доступність",
@@ -120,7 +122,8 @@
             "terms_and_conditions": "Загальні положення та умови"
         },
         "me_app_more_info": "Дізнайтеся більше про додаток Me",
-        "provider_sign_up": "Зареєструйтеся як провайдер"
+        "provider_sign_up": "Зареєструйтеся як провайдер",
+        "sponsor_logo_alt": "Логотип спонсора"
     },
     "auth_start": {
         "example": "Введіть дійсну адресу електронної пошти, наприклад, <strong>naam@voorbeeld.com</strong>"
@@ -537,10 +540,10 @@
                 "title_log_digid": "Єдиний вхід з DigiD"
             },
             "labels": {
-                "has_app": "Увійдіть в систему за допомогою Me-app&gt;&gt;.",
-                "no_app": "Я хочу увійти за допомогою моєї адреси електронної пошти &gt;",
-                "restore_with_digid_formal": "Забули, яку адресу електронної пошти ви використовували? &gt;",
-                "restore_with_digid_informal": "Забули, яку адресу електронної пошти ви використовували? &gt;"
+                "has_app": "Увійдіть в систему за допомогою Me-app>>.",
+                "no_app": "Я хочу увійти за допомогою моєї адреси електронної пошти >",
+                "restore_with_digid_formal": "Забули, яку адресу електронної пошти ви використовували? >",
+                "restore_with_digid_informal": "Забули, яку адресу електронної пошти ви використовували? >"
             },
             "pane": {
                 "criterion_any": "{{ name }}' ' може бути будь-яким значенням.",
@@ -698,9 +701,9 @@
             }
         },
         "labels": {
-            "age": "&lt; 18 років",
+            "age": "< 18 років",
             "agelimit": "Вікові обмеження",
-            "amount": "&lt; € 1118.46",
+            "amount": "< € 1118.46",
             "categories_label": "Ви можете активувати свій кредит до:",
             "category": "Категорія",
             "children": "Діти",
@@ -1083,7 +1086,7 @@
                 "cta_av": "",
                 "subtitle_av": "У Вестерквартірі є багато різних горщиків, часто більше, ніж ви думаєте. На цьому сайті ви можете подавати заявки, керувати та витрачати горщики."
             },
-            "signup_cta": "Читати далі &gt;",
+            "signup_cta": "Читати далі >",
             "subtitle": "{{fund}}Ласкаво просимо на сайт . {{fund}} У вас є асигнування від муніципалітету на ? Тоді ви можете побачити пропозицію та гроші, які ви можете витратити тут.",
             "subtitle_av": "{{fund}}Ласкаво просимо на сайт програми . Ви можете подати заявку на участь у програмі та переглянути пропозицію тут. Після подачі заявки ви також можете побачити, скільки грошей ви можете витратити.",
             "subtitle_multi": "{{org_name}} {{org_name}} Ласкаво просимо до інтернет-магазину Чи отримали ви нагороду через ? Тоді ви можете побачити пропозицію та гроші, які ви можете витратити тут.",
@@ -1204,7 +1207,8 @@
             "show_more": "Показати більше",
             "total": "Всього",
             "view_explanation": "Переглянути пояснення",
-            "why": "Чому?"
+            "why": "Чому?",
+            "activate": "Активувати"
         },
         "product_item_grid": {
             "bookmark": "Додати до списку бажань"
@@ -2177,7 +2181,10 @@
             "no_data": "Немає даних",
             "out_of_stock": "Запасів більше немає"
         },
-        "tooltip": "Скільки разів ви можете скористатися цією пропозицією"
+        "tooltip": "Скільки разів ви можете скористатися цією пропозицією",
+        "price": {
+            "free": "Безкоштовно"
+        }
     },
     "products": {
         "breadcrumbs": {
@@ -2185,13 +2192,13 @@
             "products": "Пропозиція"
         },
         "distances": {
-            "3": "&lt; 3 км",
-            "5": "&lt; 5 км",
-            "10": "&lt; 10 км",
-            "15": "&lt; 15 км",
-            "25": "&lt; 25 км",
-            "50": "&lt; 50 км",
-            "75": "&lt; 75 км",
+            "3": "< 3 км",
+            "5": "< 5 км",
+            "10": "< 10 км",
+            "15": "< 15 км",
+            "25": "< 25 км",
+            "50": "< 50 км",
+            "75": "< 75 км",
             "everywhere": "Скрізь"
         },
         "filters": {
@@ -2242,7 +2249,9 @@
             "security": "Безпека",
             "sessions": "Сесії",
             "share": "Поділіться",
-            "vouchers": "Кредит"
+            "vouchers": "Кредит",
+            "me_app": "Me-app",
+            "provider_sign_up": "Зареєструйтеся як провайдер"
         },
         "header": {
             "subtitle": "Відскануйте ваш особистий QR-код рецензентом.",
@@ -2352,13 +2361,13 @@
             "providers": "Провайдери"
         },
         "distances": {
-            "3": "&lt; 3 км",
-            "5": "&lt; 5 км",
-            "10": "&lt; 10 км",
-            "15": "&lt; 15 км",
-            "25": "&lt; 25 км",
-            "50": "&lt; 50 км",
-            "75": "&lt; 75 км",
+            "3": "< 3 км",
+            "5": "< 5 км",
+            "10": "< 10 км",
+            "15": "< 15 км",
+            "25": "< 25 км",
+            "50": "< 50 км",
+            "75": "< 75 км",
             "everywhere": "Скрізь"
         },
         "filters": {
@@ -2718,7 +2727,21 @@
         "title": "Двофакторна автентифікація",
         "unknown_error": "Невідоме повідомлення про помилку.",
         "verification_codes_sent": "Верифікаційні коди надіслано через SMS",
-        "vouchers_restrict": "Існує один або декілька ваучерів від фонду, які обмежують цей заклад"
+        "vouchers_restrict": "Існує один або декілька ваучерів від фонду, які обмежують цей заклад",
+        "providers": {
+            "authenticator": {
+                "title": "Додаток автентифікації"
+            },
+            "phone": {
+                "title": "SMS-верифікація"
+            }
+        },
+        "app_providers": {
+            "authenticator_1password": "1Автентифікатор з паролем",
+            "authenticator_google": "Автентифікатор Google",
+            "authenticator_lastpass": "Автентифікатор LastPass",
+            "authenticator_microsoft": "Microsoft Authenticator"
+        }
     },
     "security_sessions": {
         "breadcrumbs": {
@@ -2846,9 +2869,9 @@
     "test": "{{name}} {{foo}}",
     "top_navbar_search": {
         "noresult": {
-            "funds_label": "Переглянути всі кредити &gt;",
-            "products_label": "Переглянути всі пропозиції &gt;",
-            "providers_label": "Переглянути всіх провайдерів &gt;",
+            "funds_label": "Переглянути всі кредити >",
+            "products_label": "Переглянути всі пропозиції >",
+            "providers_label": "Переглянути всіх провайдерів >",
             "subtitle": "{{ query }}Не знайдено результатів для \" \". Будь ласка, спробуйте ще раз з іншими пошуковими термінами."
         },
         "placeholders": {
@@ -2956,7 +2979,7 @@
                 "activate": "Банки."
             },
             "products": "Пропозиція",
-            "profile": "Профіль &gt;&gt; Профіль &gt;&gt; Профіль &gt;&gt; Профіль",
+            "profile": "Профіль >> Профіль >> Профіль >> Профіль",
             "providers": "Провайдери",
             "records": "Мої особисті дані",
             "reimbursements": "Відшкодування витрат",
@@ -3116,7 +3139,9 @@
             "labels": {
                 "contact_provider": "У вас виникли запитання щодо цієї пропозиції? Якщо так, будь ласка, зв'яжіться з нами.",
                 "contact_sponsor": "Є питання? Зв'яжіться з нами.",
-                "description": "1.<br/><br/>Натисніть на Пропозицію, оберіть та забронюйте заняття. АБО 2. Віднеси QR-код провайдеру. Провайдер відсканує QR-код і зарезервує ваше заняття."
+                "description": "1.<br/><br/>Натисніть на Пропозицію, оберіть та забронюйте заняття. АБО 2. Віднеси QR-код провайдеру. Провайдер відсканує QR-код і зарезервує ваше заняття.",
+                "email": "Адреса електронної пошти:",
+                "phone": "Номер телефону:"
             },
             "lost_my_pass": "Я загубив перепустку.",
             "qrcode": {
@@ -3287,5 +3312,28 @@
         },
         "description": "Ця сторінка знаходиться на стадії розробки.",
         "title": "Робота над проектом триває"
+    },
+    "pre_check": {
+        "breadcrumb": {
+            "check": "Перевірка горщиків",
+            "home": "Головна"
+        },
+        "funds": "Кошти",
+        "next_step": "Далі",
+        "no_value": "---",
+        "of": "від",
+        "previous_step": "Попередній крок",
+        "search": "Пошук",
+        "show_less": "Показати менше",
+        "show_more": "Показати більше",
+        "advice": "Думка",
+        "all_categories": "Всі категорії",
+        "all_organizations": "Всі організації",
+        "almost_there": "Ти майже на місці!",
+        "change_answers": "Змінити відповіді",
+        "download_pdf": "Завантажити у форматі PDF",
+        "total_amount": "Загальна сума",
+        "total_offers": "Загальна пропозиція",
+        "your_data": "Ваші дані"
     }
 }
